--- a/elsalto/index.html
+++ b/elsalto/index.html
@@ -36,7 +36,7 @@
  <label id=pass-label class=form-label>Contraseña</label>
  <input id=pass-input name=password tabindex=2 type=password required=true class=form-field value autocomplete=current-password>
  </div>
- <a id=forgot-password href=https://webmail.elsalto.gob.mx/wmidentity/recover/password tabindex=4>¿Olvidaste tu contraseña?</a>
+ <a id=forgot-password href=# tabindex=4>¿Olvidaste tu contraseña?</a>
  </div>
  </div>
  </div>
